# evo

./: .gitignore  CMakeLists.txt  Dockerfile  Dockerfile.dev  README.md  evosim.conf
examples/: simple_evolution.py
include/cli/: command_processor.h  evolution_controller.h
include/core/: bytecode_generator.h  bytecode_vm.h  environment.h  evolution_engine.h  opcodes.h  organism.h  symmetry_analyzer.h
include/utils/: config_manager.h  logger.h  random_generator.h
scripts/: build.sh
src/: CMakeLists.txt  main.cpp  main_daemon.cpp
src/cli/: command_processor.cpp  evolution_controller.cpp
src/core/: bytecode_generator.cpp  bytecode_vm.cpp  environment.cpp  evolution_engine.cpp  organism.cpp  symmetry_analyzer.cpp
src/utils/: config_manager.cpp  logger.cpp  random_generator.cpp
tests/: CMakeLists.txt  bytecode_vm_rgb_test.cpp  test_bytecode_vm.cpp  test_common.h  test_config_manager.cpp  test_environment.cpp  test_evolution_engine.cpp  test_organism.cpp  test_symmetry_analyzer.cpp
